# tree-sitter-kecc-ir

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-kecc_ir.h  tree-sitter-kecc_ir.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kecc_ir/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKeccIrTests/: TreeSitterKeccIrTests.swift
examples/: lit.ir  lit_test.ir
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: alignof.txt  array.txt  array2.txt  array3.txt  array4.txt  array5.txt  bar.txt  bitwise.txt  cmp.txt  comma.txt  complement.txt  complete_cond.txt  cond.txt  cond_and_loop.txt  const_prop.input.txt  const_prop.output.txt  deadcode.input.txt  deadcode.output.txt  empty.input.txt  empty.output.txt  fib2.txt  fib3.txt  fib4.txt  fib5.txt  fibonacci.txt  float.txt  float2.txt  foo.txt  foo2.txt  foo3.txt  foo4.txt  for_continue_break.txt  gcd.txt  gvn.input.txt  gvn.output.txt  integer_literal.txt  integer_literal2.txt  logical_op.txt  mem2reg.input.txt  mem2reg.output.txt  (+31 more)
